--- a/main.ipynb
+++ b/main.ipynb
@@ -48,6 +48,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Index(['2020-12-31', '2020-12-30', '2020-12-29', '2020-12-28', '2020-12-24',\n",
+       "       '2020-12-23', '2020-12-22', '2020-12-21', '2020-12-18', '2020-12-17',\n",
+       "       ...\n",
+       "       '2016-01-14', '2016-01-13', '2016-01-12', '2016-01-11', '2016-01-08',\n",
+       "       '2016-01-07', '2016-01-06', '2016-01-05', '2016-01-04', '2015-12-31'],\n",
+       "      dtype='object', name='일자', length=1233)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "# import pandas as pd\n",
+    "# rf_interest_rate = pd.read_excel('data/risk_free_interest_rate_20210103132202.xlsx').set_index('일자')\n",
+    "# rf_interest_rate.index.map(lambda x: x.strftime('%Y-%m-%d'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 68,
    "metadata": {},
    "outputs": [],
