--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,27 +48,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "Index(['2020-12-31', '2020-12-30', '2020-12-29', '2020-12-28', '2020-12-24',\n",
-       "       '2020-12-23', '2020-12-22', '2020-12-21', '2020-12-18', '2020-12-17',\n",
-       "       ...\n",
-       "       '2016-01-14', '2016-01-13', '2016-01-12', '2016-01-11', '2016-01-08',\n",
-       "       '2016-01-07', '2016-01-06', '2016-01-05', '2016-01-04', '2015-12-31'],\n",
-       "      dtype='object', name='일자', length=1233)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 14
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import pandas as pd\n",
     "# rf_interest_rate = pd.read_excel('data/risk_free_interest_rate_20210103132202.xlsx').set_index('일자')\n",
@@ -77,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,6 +73,18 @@
     "t = np.linspace(0, 100, 1201)\n",
     "spot = sw.spot_rate(t)\n",
     "forward = sw.forward_rate(t, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ns = NelsonSiegel()\n",
+    "ns.set_params(maturity, rate)\n",
+    "spot = ns.spot_rate(t)\n",
+    "forward = ns.forward_rate(t, 1/12)"
    ]
   }
  ],
