--- a/main.ipynb
+++ b/main.ipynb
@@ -7,7 +7,31 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from dbesg import SmithWilson, NelsonSiegel"
+    "from dbesg import SmithWilson, NelsonSiegel, DynamicNelsonSiegel, sample_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dns.train(data, disp=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# dt, maturity, data = sample_data()\n",
+    "# dns = DynamicNelsonSiegel(dt, maturity)\n",
+    "# dns.train(data, disp=True)\n",
+    "time, num = 1, 200\n",
+    "scenarios = dns.sample(time, num)"
    ]
   },
   {
